fixes in spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -92,6 +92,7 @@ main {
     padding: 1.8em;
 
     border-radius: 1.4em 1.4em 0 0;
+    gap: 1.5rem;
 }
 
 /* ********************************** */
@@ -104,7 +105,7 @@ main {
     width: 100%;
     border: none;
     text-align: end;
-    padding: 0.4rem;
+    padding:  0 1rem;
     font-size: 20px;
     font-weight: var(--fw-bold);
     color: var(--color-neutral-900);
@@ -162,14 +163,13 @@ input[type=number] {
 /* ********************************** */
 
 .calculator {
-    border: 1px solid red;
     display: grid;
     gap: 20px;
 }
 
 .calculator__title {
     color: var(--color-neutral-500);
-    font-size: 14px;
+    font-size: 12px;
     padding: 0 0 8px 0;
 }
 
